1mDVS_final/workspace/.metadata/.plugins/org.eclipse.cdt.ui/TestPlatform_CGen.build.log
18:53:33 **** Rebuild of configuration Debug for project TestPlatform_CGen ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\components_FilterBy_Automatic.o ..\src\components_FilterBy_Automatic.c 
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\components_PID_Automatic.o ..\src\components_PID_Automatic.c 
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\Component_SFunction_Automatic.o ..\src\Component_SFunction_Automatic.c 
gcc -I../include -I../src -O0 -g3 -Wall -c -fmessage-length=0 -Wno-unused -ansi -o src\components_Component_Automatic.o ..\src\components_Component_Automatic.c 
In file included from ../include/esdl.h:20,
In file included from ../include/esdl.h:20,
In file included from ../include/esdl.h:20,
In file included from ../include/esdl.h:20,
In file included from ../include/esdl.h:20,
In file included from ../include/esdl.h:20,
                 from ..\src\globalH.h:9,
                 from ..\src\components_Component_Automatic.c:22:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
                 from ..\src\globalH.h:9,
                 from ..\src\Component_SFunction_Automatic.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
                 from ..\src\globalH.h:9,
                 from ..\src\components_FilterBy_Automatic.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
In file included from ../include/esdl.h:20,
                 from ..\src\globalH.h:9,
                 from ..\src\components_PID_Automatic.c:17:
../include/esdl_mutex.h:56:3: error: #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
  #error Potentially unsafe message caching. Race conditions may occur in multi-threaded environments. See esdl_mutex.h for options
   ^~~~~
Info: Parallel threads used: 4

18:53:34 Build Failed. 5 errors, 0 warnings. (took 763ms)

